--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bootstrap": "^5.3.0",
     "jquery": "^3.7.0",
     "lodash.debounce": "^4.0.8",
+    "postcss": "^8.4.27",
+    "postcss-dir-pseudo-class": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -47,6 +49,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "eslint": "^8.46.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react": "^7.33.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^5.0.0"
   }
 }
